Created CSS Body & Header Div tags.

--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -1,1 +1,11 @@
-/*  MASTER CSS FILE  */
+/*  MASTER CSS FILE for APPLE WATCH */
+body{
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+}
+
+header div{
+  width: 100vw;
+  height: 44px;
+
+  background-color: #333;
+}
