Created the Header ul li tags.

--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -9,3 +9,43 @@ header div{
 
   background-color: #333;
 }
+
+
+header ul{
+  width: 1000px;
+  height: auto;
+  margin: 0 auto;
+
+  background-color: #f00;
+}
+
+
+
+header ul li{
+  width: 10%;
+  height: auto;
+  display: inline-block;
+  float: left;
+  text-align: center;
+  line-height: 44px;
+  color: #fff;
+  font-size: .85em;
+  letter-spacing: .08em;
+  font-weight: 300;
+  cursor: pointer;
+  user-select: none;
+  transition: .2s;
+}
+
+
+
+header ul li:hover{
+  transition: .2s;
+  color: #b8b8b8;
+}
+
+
+
+header ul li:first-child{
+  font-size: 1.35em;
+}
