--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -1,12 +1,22 @@
 /*  MASTER CSS FILE for APPLE WATCH */
-body{
+/* body{
   font-family: "Helvetica Neue", Helvetica, sans-serif;
+
+} */
+
+@font-face {
+  font-family: "appleFont";
+  src: url('fonts/SanFranciscoFont-master/SanFranciscoDisplay-Regular.otf');
+
+}
+
+body{
+  font-family: 'appleFont', "Helvetica Neue", Helvetica, sans-serif;
 }
 
 header div{
   width: 100vw;
   height: 44px;
-
   background-color: #333;
 }
 
