--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -2,50 +2,50 @@
 
 
 @font-face {
-  font-family: "appleFont";
-  src: url('fonts/SanFranciscoFont-master/SanFranciscoDisplay-Regular.otf');
+    font-family: "appleFont";
+    src: url('fonts/SanFranciscoFont-master/SanFranciscoDisplay-Regular.otf');
 
 }
 
 body{
-  font-family: 'appleFont', "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'appleFont', "Helvetica Neue", Helvetica, sans-serif;
 }
 
 header {
-  width: 100vw;
-  height: 44px;
-  background-color: #333;
+    width: 100vw;
+    height: 44px;
+    background-color: #333;
 }
 
 header ul{
-  width: 1075px;
-  height: auto;
-  margin: 0 auto;
+    width: 1075px;
+    height: auto;
+    margin: 0 auto;
 }
 
 header ul li{
-  width: 10%;
-  height: auto;
-  display: inline-block;
-  float: left;
-  text-align: center;
-  line-height: 44px;
-  color: #fff;
-  font-size: .85em;
-  letter-spacing: .08em;
-  font-weight: 300;
-  cursor: pointer;
-  user-select: none;
-  transition: .2s;
+    width: 10%;
+    height: auto;
+    display: inline-block;
+    float: left;
+    text-align: center;
+    line-height: 44px;
+    color: #fff;
+    font-size: .85em;
+    letter-spacing: .08em;
+    font-weight: 300;
+    cursor: pointer;
+    user-select: none;
+    transition: .2s;
 }
 
 header ul li:hover{
-  transition: .2s;
-  color: #b8b8b8;
+    transition: .2s;
+    color: #b8b8b8;
 }
 
 header ul li:first-child{
-  font-size: 1.35em;
+    font-size: 1.35em;
 }
 
 svg:hover path {
@@ -56,48 +56,48 @@ svg:hover path {
 
 
 .nav-wrapper{
-  width: 100vw;
-  height: 160px;
-  /* background-color: #f00; */
+    width: 100vw;
+    height: 160px;
+    /* background-color: #f00; */
 
-  position: relative;
+    position: relative;
 }
 
 .nav-items{
-  width: 900px;
-  height: 140px;
-  /* background-color: grey; */
-  margin: 0 auto;
+    width: 900px;
+    height: 140px;
+    /* background-color: grey; */
+    margin: auto;
 }
 
 .nav-items li{
-  display: inline-block;
-  width: 8%;
-  font-size: 0.8em;
-  text-align: center;
-  position: relative;
-  padding: 10px;
-  left: 20px;
-  margin-left: 10px;
+    display: inline-block;
+    width: 8%;
+    font-size: 0.8em;
+    text-align: center;
+    position: relative;
+    padding: 1px;
+    left: 75px;
+    margin-left: 14px;
+    min-height: 89px;
+    vertical-align: text-top;
 
 }
 
 .nav-link{
     color: #111;
     display: block;
-    margin-top: 3px;
+    margin-top: 1px;
     padding: 0;
     position: relative;
     z-index: 1;
 }
 
 .nav-label{
-  font-size: 11px;
+    font-size: 11px;
     line-height: 1.09091;
     font-weight: 400;
-    letter-spacing: -.008em;
-    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-    display: block;
+    letter-spacing: .07em;
     margin: 0;
     white-space: normal;
     max-width: 7em;
@@ -105,23 +105,23 @@ svg:hover path {
 }
 
 .nav-new{
-  font-size: 9px;
-  line-height: 1.22226;
-  font-weight: 400;
-  letter-spacing: -.006em;
-  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-  color: #e85d00;
-  display: block;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
+    font-size: 9px;
+    line-height: 1.22226;
+    font-weight: 400;
+    letter-spacing: -.006em;
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    color: #e85d00;
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
 }
 
 .nav-icon{
-  background: center bottom no-repeat;
-  display: block;
-  margin: 0px  auto 6px;
+    background: center bottom no-repeat;
+    display: block;
+    margin: 0px  auto 6px;
 }
 
 
