--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -209,11 +209,35 @@ svg:hover path {
 }
 
 .top-watch-link{
-
   display: block;
   margin-left: 457px;
   margin-right: auto;
   width: 50%;
   position: relative;
+}
+
+
+
+
+
+/*   *****  Series 4 Logo and Links  ****** */
+
+.series4-wrapper{
+    width: 100vw;
+    height: 532.19px;
+    /* background-color: #f00; */
+
+}
+
+.series4-logo{
+    width: 300px;
+    height: 256px;
+    /* background-color: grey; */
+    background-image: url(https://www.apple.com/v/watch/home/j/images/watch_series_4_logo_large_2x.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 275px 106px;
+    margin: auto;
+    margin-right: 577px;
 
 }
