--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -218,8 +218,6 @@ svg:hover path {
 
 
 
-
-
 /*   *****  Series 4 Logo and Links  ****** */
 
 .series4-wrapper{
@@ -241,3 +239,116 @@ svg:hover path {
     margin-right: 577px;
 
 }
+
+.series4-avail{
+  text-align: center;
+  color: #777;
+  font-weight: 400;
+  font-size: 1.4em;
+  margin-top: 33px;
+
+}
+
+.seriesLinks{
+  text-align: center;
+  margin-top: 30px;
+  font-weight: 400;
+}
+
+
+.series4-links{
+  text-decoration: none;
+  color: #4b88d4;
+  font-size: 1.4em;
+  margin-left: 7px;
+  margin-right: 7px;
+}
+
+.series4-links:hover{
+  text-decoration: underline;
+}
+
+
+/* *******  THE BEGINNING OF THE 4 SQUARE PHOTOS  ******* */
+
+
+.tiles-wrapper{
+  width: 100vw;
+  height: auto;
+  background-color: red;
+
+
+}
+
+.tiles-ul{
+margin-left: 30px;
+margin-right: 30px;
+margin-bottom: 30px;
+display: block;
+}
+
+.tile-health{
+  width: 690px;
+  height: 690px;
+  background-image: url(https://www.apple.com/v/watch/home/j/images/jump-tiles/health_static_large_2x.jpg);
+  background-size: 675px 675px;
+  width: 50%;
+  background-repeat: no-repeat;
+  float: left;
+  display: block;
+
+}
+
+  .tile-workout{
+    width: 690px;
+    height: 690px;
+    background-image: url(https://www.apple.com/v/watch/home/j/images/jump-tiles/workout_static_large_2x.jpg);
+    background-size: 675px 675px;
+    width: 50%;
+    background-repeat: no-repeat;
+    float: left;
+    display: block;
+
+  }
+
+  .tile-activity{
+    width: 690px;
+    height: 690px;
+    background-image: url(https://www.apple.com/v/watch/home/j/images/jump-tiles/activity_static_large_2x.jpg);
+    background-size: 675px 675px;
+    width: 50%;
+    background-repeat: no-repeat;
+    float: left;
+  }
+
+  .tile-connect{
+    width: 690px;
+    height: 690px;
+    background-image: url(https://www.apple.com/v/watch/home/j/images/jump-tiles/connect_static_large_2x.jpg);
+    background-size: 675px 675px;
+    width: 50%;
+    background-repeat: no-repeat;
+    float: left;
+  }
+
+
+.tile-headline {
+    display: block;
+    text-align: left;
+    font-size: 3.2em;
+    margin-left: 105px;
+    margin-block-start: 4em;
+    margin-block-end: 0.83em;
+    font-weight: bold;
+    color: #fff;
+  }
+
+
+  .icon-copy{
+    display: block;
+    text-align: left;
+    font-size: 1.7em;
+    margin-left: 105px;
+    color: #fff;
+    text-decoration: none;
+  }
